# agent-ui-starter-pack

./: .dockerignore  .firebaserc  .gcloudignore  A2A_GUIDE.md  AGENT_OPS_STORY.md  CLI_COMMANDS.md  CLI_TEST_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  GEMINI.md  GETTING_STARTED.md  MANIFEST.in  Makefile  README.md  index.html  llm.txt  package-lock.json  package.json  pyproject.toml  setup_agent_engine.sh  setup_gcp.sh
.firebase/: hosting.ZGlzdA.cache
public/: A2A_GUIDE.md  App.tsx  BE_INTEGRATION_GUIDE.md  CLI_COMMANDS.md  CLI_TEST_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  GEMINI.md  GETTING_STARTED.md  Makefile  README.md  main.py  ui_main.py
src/: App.tsx  index.css
src/agentui_starter_pack/cli/: main.py  ui_main.py
src/backend/: agent.py  auth_manager.py  cost_control.py  domain_config.py  intelligence.py  optimizer.py
src/components/: Home.tsx  OpsDashboard.tsx
src/docs/: DocLayout.tsx  DocPage.tsx
tests/: test_cli.py
